Turso replacing Supabase

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
+# OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4o
-SUPABASE_URL=https://your-project-id.supabase.co
-SUPABASE_KEY=your-supabase-service-key
+OPENAI_MODEL=gpt-4
+
+# Database Configuration
+TURSO_DB_URL=your-turso-db-url
+TURSO_DB_AUTH_TOKEN=your-turso-auth-token
+
+# Logging
 LOG_LEVEL=INFO 
