--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "init-db": "bun run src/initialize-db.ts"
+    "init-db": "bun run src/initialize-db.ts",
+    "start": "bun run src/index.ts",
+    "start:pipeline": "bun run src/index.ts --run-pipeline",
+    "test:api": "bun run src/api/test-api.ts",
+    "dev": "bun --watch run src/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -15,8 +19,10 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.8",
     "@libsql/client": "^0.14.0",
     "dotenv": "^16.4.7",
+    "hono": "^4.7.2",
     "openai": "^4.86.1",
     "uuid": "^11.1.0"
   }
